--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,3 @@
-
 name: Deployment pipeline
 
 on:
@@ -10,7 +9,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  simple_deployment_pipeline:
+  deployment:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -23,6 +22,15 @@ jobs:
         run: npm run lint
       - name: build
         run: npm run build
+      - name: deploy to Heroku
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
+        uses: akhileshns/heroku-deploy@v3.11.10 
+        with:
+          heroku_api_key: ${{secrets.HEROKU_TOKEN}}
+          heroku_app_name: "fs-toskaboiler"
+          heroku_email: "${{secrets.EMAIL}}"
+          healthcheck: "https://fs-toskaboiler.herokuapp.com"
+          rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
@@ -31,16 +39,6 @@ jobs:
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: master
       - uses: actions/checkout@v2
-      - name: deploy to Heroku
-        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
-        uses: akhileshns/heroku-deploy@v3.11.10 
-        with:
-          heroku_api_key: ${{secrets.HEROKU_TOKEN}}
-          heroku_app_name: "fs-toskaboiler"
-          heroku_email: "${{secrets.EMAIL}}"
-          healthcheck: "https://fs-toskaboiler.herokuapp.com/ping"
-          checkstring: "pong"
-          rollbackonhealthcheckfailed: true
       #- name: slack notification
       #  uses: 8398a7/action-slack@v3
       #  with:
