--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -39,11 +39,11 @@ jobs:
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: master
       - uses: actions/checkout@v2
-      #- name: slack notification
-      #  uses: 8398a7/action-slack@v3
-      #  with:
-      #    status: ${{ job.status }}
-      #    fields: repo,message,commit,eventName,workflow,took
-      #  env:
-      #    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      #  if: always()
+      - name: slack notification
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,eventName,workflow,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
