Try adding cypress-tests

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,12 @@ jobs:
         run: npm run lint
       - name: build
         run: npm run build
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm start
+          wait-on: http://localhost:8000        
       - name: deploy to Heroku
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.11.10 
@@ -39,11 +45,11 @@ jobs:
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: master
       - uses: actions/checkout@v2
-      - name: slack notification
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,eventName,workflow,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always()
+      # - name: slack notification
+      #   uses: 8398a7/action-slack@v3
+      #   with:
+      #     status: ${{ job.status }}
+      #     fields: repo,message,commit,eventName,workflow,took
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      #   if: always()
