--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,13 @@
 {
-  "extends": "airbnb",
   "parser": "babel-eslint",
   "env": {
-    "browser": true
+    "browser": true,
+    "cypress/globals": true
   },
+  "extends": [
+    "airbnb",
+    "plugin:cypress/recommended"
+  ],
   "rules": {
     "semi": [
       "error",
