--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "build": "webpack --mode=production",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "cypress run"
   },
   "engines": {
     "node": ">=10.15"
@@ -53,6 +54,8 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "cypress": "^6.5.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "nodemon": "^2.0.2",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.1",
