--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack --mode=production",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
   "engines": {
@@ -59,7 +60,8 @@
     "nodemon": "^2.0.2",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "xvfb": "^0.4.0"
   },
   "nodemonConfig": {
     "ignore": [
