--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -36,6 +36,8 @@ jobs:
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: master
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: deploy to Heroku
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.11.10
