--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - run: git checkout HEAD^
       - name: deploy to Heroku
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.11.10
@@ -47,12 +48,11 @@ jobs:
           heroku_email: "${{ secrets.EMAIL }}"
           healthcheck: "https://fs-toskaboiler.herokuapp.com"
           rollbackonhealthcheckfailed: true
-
-      # - name: slack notification
-      #   uses: 8398a7/action-slack@v3
-      #   with: 
-      #     status: ${{ job.status }}
-      #     fields: repo,message,commit,eventName,workflow,took
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      #   if: always()
+      - name: slack notification
+        uses: 8398a7/action-slack@v3
+        with: 
+          status: ${{ job.status }}
+          fields: repo,message,commit,eventName,workflow,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
